# GenOS

./: pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
