[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genos"
version = "0.1.0"
description = "Multi-Agent Linux Command Execution System"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.9"
dependencies = [
    "langchain",
    "langchain-groq",
    "langchain-community",
    "tavily-python",
]

[project.scripts]
genos = "genos.main:main"
